--- a/.github/workflows/integration-Bat.yml
+++ b/.github/workflows/integration-Bat.yml
@@ -10,6 +10,9 @@ on:
 
 jobs:
   metadata:
+    strategy:
+      matrix:
+        tests: ${{ fromJSON(inputs.chunk) }}
 #    strategy:
 #      fail-fast: false
 #      matrix:
@@ -21,4 +24,4 @@ jobs:
 
       - name: Run Integration Test
         run: |
-          echo "Running integration test for chunk ${{ inputs.chunk }}"
+          echo "Running integration test for chunk ${{ matrix.tests }}"
