--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -7,8 +7,8 @@ jobs:
     strategy:
       matrix:
         tests:
-          - [ { portalName: marketingPortal, suiteName: UpdateAudienceAfterPromoLaunch=marketingPortal }, { portalName: marketingPortal, suiteName: UpdateAudienceAfterPromoLaunch=marketingPortal } ]
-          - [ { portalName: marketingPortal, suiteName: UpdateAudienceAfterPromoLaunch=marketingPortal }, { portalName: marketingPortal, suiteName: UpdateAudienceAfterPromoLaunch=marketingPortal } ]
+          - '[ { portalName: marketingPortal, suiteName: UpdateAudienceAfterPromoLaunch=marketingPortal }, { portalName: marketingPortal, suiteName: UpdateAudienceAfterPromoLaunch=marketingPortal } ]'
+          - '[ { portalName: marketingPortal, suiteName: UpdateAudienceAfterPromoLaunch=marketingPortal }, { portalName: marketingPortal, suiteName: UpdateAudienceAfterPromoLaunch=marketingPortal } ]'
 
     uses: ./.github/workflows/integration-Bat.yml
     with:
