--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -1,40 +1,20 @@
-name: Main Workflow
+name: Bat Test
 
 on:
-  push:
-    branches:
-      - main
-
+  workflow_dispatch:
 jobs:
-  process-lists:
+  test:
+    strategy:
+      matrix:
+#        tests: [ "[ \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\", \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\" ]", "[ \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\", \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\" ]"]
+        tests: [ "{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }", "{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }" ]
+#    uses: ./.github/workflows/integration-Bat.yml
+#    with:
+#      chunk: ${{ matrix.tests }}
     runs-on: ubuntu-latest
-    outputs:
-      sublists: ${{ steps.prepare-sublists.outputs.sublists }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Prepare sublists
-        id: prepare-sublists
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Run Integration Test
         run: |
-          # Define your nested lists here
-          subLists=$(cat << 'EOF'
-          [
-            [
-              "{ 'portalName': 'marketingPortal', 'suiteName': 'UpdateAudienceAfterPromoLaunch=marketingPortal' }",
-              "{ 'portalName': 'marketingPortal', 'suiteName': 'UpdateAudienceAfterPromoLaunch=marketingPortal' }"
-            ],
-            [
-              "{ 'portalName': 'marketingPortal', 'suiteName': 'UpdateAudienceAfterPromoLaunch=marketingPortal' }",
-              "{ 'portalName': 'marketingPortal', 'suiteName': 'UpdateAudienceAfterPromoLaunch=marketingPortal' }"
-            ]
-          ]
-          EOF
-          )
-          echo "sublists=$subLists" >> $GITHUB_OUTPUT
-
-      - name: Trigger sub-workflow
-        uses: actions/workflow-caller@v2
-        with:
-          workflow: trigger.yml
-          arguments: '{"sublists": "${{ steps.prepare-sublists.outputs.sublists }}"}'
+          echo "Running integration test for chunk ${{ matrix.tests }}"
