--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
 #        tests: [ "[ \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\", \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\" ]", "[ \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\", \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\" ]"]
-        tests: [ "{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }", "{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }" ]
+        tests: [ { "portalName: marketingPortal", "suiteName: UpdateAudienceAfterPromoLaunch=marketingPortal" }, { "portalName: marketingPortal", "suiteName: UpdateAudienceAfterPromoLaunch=marketingPortal" } ]
 #    uses: ./.github/workflows/integration-Bat.yml
 #    with:
 #      chunk: ${{ matrix.tests }}
@@ -17,4 +17,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Run Integration Test
         run: |
-          echo "Running integration test for chunk ${{ matrix.tests }}"
+          echo "Running integration test for chunk ${{ matrix.tests }} "
+          echo "Running integration test for chunk ${{ matrix.tests.portalName }} ${{matrix.tests.suiteName}}"
