--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -6,16 +6,16 @@ jobs:
   test:
     strategy:
       matrix:
-#        tests: [ "[ \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\", \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\" ]", "[ \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\", \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\" ]"]
-        tests: [ { "portalName": "marketingPortal", "suiteName": "UpdateAudienceAfterPromoLaunch=marketingPortal" }, { "portalName": "marketingPortal", "suiteName": "UpdateAudienceAfterPromoLaunch=marketingPortal" } ]
-#    uses: ./.github/workflows/integration-Bat.yml
-#    with:
-#      chunk: ${{ matrix.tests }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Run Integration Test
-        run: |
-          echo "Running integration test for chunk ${{ matrix.tests }} "
-          echo "Running integration test for chunk ${{ matrix.tests.portalName }} ${{matrix.tests.suiteName}}"
+        tests: [ "[ \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\", \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\" ]", "[ \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\", \"{ \"portalName\": \"marketingPortal\", \"suiteName\": \"UpdateAudienceAfterPromoLaunch=marketingPortal\" }\" ]"]
+#        tests: [ { "portalName": "marketingPortal", "suiteName": "UpdateAudienceAfterPromoLaunch=marketingPortal" }, { "portalName": "marketingPortal", "suiteName": "UpdateAudienceAfterPromoLaunch=marketingPortal" } ]
+    uses: ./.github/workflows/integration-Bat.yml
+    with:
+      chunk: ${{ matrix.tests }}
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#      - name: Run Integration Test
+#        run: |
+#          echo "Running integration test for chunk ${{ matrix.tests }} "
+#          echo "Running integration test for chunk ${{ matrix.tests.portalName }} ${{matrix.tests.suiteName}}"
