--- a/.github/workflows/integration-Bat.yml
+++ b/.github/workflows/integration-Bat.yml
@@ -10,13 +10,9 @@ on:
 
 jobs:
   metadata:
-    strategy:
-      matrix:
-        tests: ${{ fromJSON(inputs.chunk) }}
 #    strategy:
-#      fail-fast: false
 #      matrix:
-#        test: ${{ inputs.chunk }}
+#        tests: ${{ fromJSON(inputs.chunk) }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,4 +20,4 @@ jobs:
 
       - name: Run Integration Test
         run: |
-          echo "Running integration test for chunk ${{ matrix.tests }}"
+          echo "Running integration test for chunk ${{ inputs.chunk }} "
