push local code to master

--- a/.github/workflows/integration-Bat.yml
+++ b/.github/workflows/integration-Bat.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   metadata:
     strategy:
+      fail-fast: false
+      max-parallel: 2
       matrix:
         tests: ${{ fromJSON(inputs.chunk) }}
     runs-on: ubuntu-latest
