--- a/scripts/portals/config7.yml
+++ b/scripts/portals/config7.yml
@@ -1,6 +1,66 @@
 # config7.yml
 suites:
-  - item5
-  - item6
-  - item7
-  - item8
+  - Config7ApplicationsTabSectionTest=config7
+  - Config7ApplicationsSchedulerTest=config7
+  - Config7ApplicationsTabTest=config7
+  - Config7ReleaseNotesTest=config7
+  - Config7CompanyUserPwdValidateTest=config7
+  - Config7DashboardTest=config7
+  - Config7DealerContactAmenities=config7
+  - Config7DealerContactTest=config7
+  - Config7DealerSelectorTest=config7
+  - Config7DealershipAmenitiesTest=config7
+  - Config7DealershipBlockedHoursTest=config7
+  - Config7DealershipHoursTest=config7
+  - Config7DealershipPermissionTest=config7
+  - Config7DealershipTabDisableTest=config7
+  - Config7DealershipUserManagement=config7
+  - Config7DealershipUserTest=config7
+  - Config7EnabledFlagsTest=config7
+  - Config7EngagePrintRODisplayTest=config7
+  - Config7EngageRoPrinterAndAssignmentTest=config7
+  - Config7LocalizationKeysTest=config7
+  - Config7ResourceAdvisorAppointmentTest=config7
+  - Config7ResourceAdvisorSectionTeamsDisabledTest=config7
+  - Config7ResourceAdvisorSectionTeamsTest=config7
+  - Config7ResourceAdvisorSectionWorkingHourTest=config7
+  - Config7ResourceAdvisorTeamTest=config7
+  - Config7ResourceAdvisorTest=config7
+  - Config7ResourceCapacityDataTest=config7
+  - Config7ResourceCapacityTeamTest=config7
+  - Config7ResourceDeleteAdvisorTest=config7
+  - Config7ResourceEnableAndDisableTeamTest=config7
+  - Config7ResourceHoursTest=config7
+  - Config7ResourceTeamsAdvisorEnableAndDisabledTest=config7
+  - Config7ResourceTeamsEditTest=config7
+  - Config7ResourceTransportationCapacityTest=config7
+  - Config7ResourceTransportationLoanerCapacityTest=config7
+  - Config7ResourceTransportationLoanerRentalTest=config7
+  - Config7ResourceTransportationPermissionTest=config7
+  - Config7ResourceTransportationServiceTest=config7
+  - Config7ResourceTransportationTeamTest=config7
+  - Config7ResourceTransportationTest=config7
+  - Config7ResourceVerificationTest=config7
+  - Config7ResourcesCapacityAusTeams=config7
+  - Config7ResourcesTabTest=config7
+  - Config7ResourcesCapacityUsNoTeams=config7
+  - Config7ResourcesCapacityUsTeams=config7
+  - Config7ResourcesPermissionTest=config7
+  - Config7ResourcesTeamsTest=config7
+  - Config7ResourcesVehicleTest=config7
+  - Config7ShopSkillAppointmentTest=config7
+  - Config7ShopSkillCapacitiesTest=config7
+  - Config7DealershipEmailCommunicationTest=config7
+  - Config7DealershipTabTestData=config7=multiPortal
+  - MultiConfig7ResourceTransportationEnableDisableTest=multiPortal
+  - MultiConfig7ResourceTransportationTest=multiPortal
+  - MultiConfig7ResourceTransportationValetTest=multiPortal
+  - MultiConfig7ValetFunctionalityTest=multiPortal
+  - MultiConfig7ApplicationsConsumerTest=multiPortal
+  - Config7ApplicationsConsumerVariantTest=config7
+  - Config7RecallCapacityTest=config7
+  - Config7ResourceAdvisorsTest=config7
+  - Config7ResourceCapacityTest=config7
+  - Config7ResourceTabTest=config7
+  - Config7TeamsTest=config7
+  - Config7ResourcesCapacityTabTest=config7
