--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,30 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.10.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xtime.automation</groupId>
+            <artifactId>api</artifactId>
+            <version>8.17.0-SNAPSHOT</version>
+            <classifier>test-jar-with-dependencies</classifier>
+        </dependency>
+
     </dependencies>
 
     <build>
